sso/sso-auth-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sso-auth
  labels:
    k8s-app: sso-auth
  namespace: sso
spec:
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: sso-auth
    spec:
      containers:
      - image: buzzfeed/sso-dev:latest
        name: sso-auth
        command: ["/bin/sso-auth"]
        ports:
        - containerPort: 4180
        readinessProbe:
          httpGet:
            path: /ping
            port: 4180
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
          - name: google-service-account
            mountPath: "/creds"
      volumes:
        - name: google-service-account
          secret:
            secretName: google-service-account
