sso/sso-proxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sso-proxy
  labels:
    k8s-app: sso-proxy
  namespace: sso
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: sso-proxy
    spec:
      containers:
      - image: buzzfeed/sso:latest
        name: sso-proxy
        command: ["/bin/sso-proxy"]
        ports:
        - containerPort: 4180
        readinessProbe:
          httpGet:
            path: /ping
            port: 4180
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - name: upstream-configs
          mountPath: /sso
          readOnly: true
      volumes:
        - name: upstream-configs
          configMap:
            name: upstream-configs
