sso/sso-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sso
  namespace: sso
spec:
  tls:
    - secretName: sso-proxy-tls-secret
      hosts:
        - "eas.apps.wuvt.vt.edu"
        - "files.apps.wuvt.vt.edu"
        - "freeipa.apps.wuvt.vt.edu"
        - "kibana.apps.wuvt.vt.edu"
    - secretName: sso-auth-tls-secret
      hosts:
        - "sso-auth.apps.wuvt.vt.edu"
  rules:
    - host: "eas.apps.wuvt.vt.edu"
      http:
        paths:
          - path: /
            backend:
              serviceName: sso-proxy
              servicePort: 80
    - host: "files.apps.wuvt.vt.edu"
      http:
        paths:
          - path: /
            backend:
              serviceName: sso-proxy
              servicePort: 80
    - host: "freeipa.apps.wuvt.vt.edu"
      http:
        paths:
          - path: /
            backend:
              serviceName: sso-proxy
              servicePort: 80
    - host: "kibana.apps.wuvt.vt.edu"
      http:
        paths:
          - path: /
            backend:
              serviceName: sso-proxy
              servicePort: 80
    - host: "sso-auth.apps.wuvt.vt.edu"
      http:
        paths:
          - path: /
            backend:
              serviceName: sso-auth
              servicePort: 80
